--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <h1>Plagiarism Checker</h1>
-        <form action="/plagiarism-check" method="post" enctype="multipart/form-data">
+        <form id="plagiarismForm" action="/plagiarism-check" method="post" enctype="multipart/form-data" id="plagiarismForm">
             <div class="form-group">
                 <label for="file">Upload a File:</label>
                 <input type="file" name="file" id="file">
@@ -24,6 +24,10 @@
                 <button type="submit">Check for Plagiarism</button>
             </div>
         </form>
+        <div id="result" class="hidden">
+            <h2>Results</h2>
+            <p id="plagiarismResult">No plagiarism detected.</p>
+        </div>
     </div>
 </body>
 <script src="index.js"></script>
