--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <h1>Plagiarism Checker</h1>
-        <form id="plagiarismForm" action="/plagiarism-check" method="post" enctype="multipart/form-data" id="plagiarismForm">
+        <form id="plagiarismForm" action="/plagiarism-check" method="post" enctype="multipart/form-data">
             <div class="form-group">
                 <label for="file">Upload a File:</label>
                 <input type="file" name="file" id="file">
