--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <textarea name="content" id="content" placeholder="Enter your text here..."></textarea>
             </div>
             <div class="form-group">
-                <button type="submit">Check for Plagiarism</button>
+                <button id="checkButton" type="submit">Check for Plagiarism</button>
             </div>
         </form>
         <div id="result" class="hidden">
