--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="container">
         <h1>Plagiarism Checker</h1>
         <form id="plagiarismForm" action="/plagiarism-check" method="post" enctype="multipart/form-data">
-            <div class="form-group">
+            <!-- <div class="form-group">
                 <label for="file">Upload a File:</label>
                 <input type="file" name="file" id="file">
-            </div>
+            </div> -->
             <div class="form-group">
                 <label for="content">Or Paste Your Text Here:</label>
                 <textarea name="content" id="content" placeholder="Enter your text here..."></textarea>
